Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
-
+\newcommand{\icev}{Faculdade iCEV}
 %VARIÁVEIS RELACIONADAS AO TRABALHO
 \newcommand{\titulo}{Título do Trabalho}
 \newcommand{\palavraschavespt}{componente, formatação, estilo}
@@ -36,8 +36,15 @@
 \newcommand{\cidade}{Teresina}
 \newcommand{\uf}{PI}
 
+\usepackage{fancyhdr}
+
 \begin{document}
 
+\pagestyle{fancy}
+\fancyhf{}
+\rhead{\titulo}
+\lhead{\bfseries \icev}
+\rfoot{}
 
 \title{\titulo}
 
