Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,9 @@
 \lhead{\bfseries \icev}
 \rfoot{}
 
-\title{\titulo}
+\title{
+    \includegraphics[width=.2\textwidth]{images/logoicev.png}
+    \\\titulo}
 
 \author{\IEEEauthorblockN{\aluno}
 \IEEEauthorblockA{\textit{\escola} \\
